src/styles.css
/* You can add global styles to this file, and also import other style files */
body {
    font-family: 'Roboto', sans-serif;
    font-size: 14px;
    background: #fff;
}

a {
    color: #b11b4d;
}

a:hover {
    color: #dc3588;
}

h1 {
    font-family: 'Spartan', sans-serif;
    font-size: 36px;
    font-weight: 800;
    text-transform: uppercase;
}

h2 {
    font-family: 'Spartan', sans-serif;
    font-size: 24px;
    text-transform: uppercase;
    font-weight: 800;
}

h3 {
    font-family: 'Spartan', sans-serif;
    font-size: 20px;
    font-weight: 800;
}

h4 {
    font-family: 'Spartan', sans-serif;
    font-size: 16px;
    font-weight: 800;
}

h5 {
    font-family: 'Spartan', sans-serif;
    font-size: 24px;
}

h6 {
    font-family: 'Spartan', sans-serif;
    font-size: 12px;
    font-weight: 800;
}
/*
.btn {
    padding: 5px 20px;
    font-size: 14px;
    border: 0px !important;
    color: #fff !important;
    background-color: #b11b4d !important;
}

.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default,
.btn:before,
.btn:after,
.btn:focus,
.btn::selection,
.btn.btn-primary:hover,
.btn.btn-primary:before,
.btn.btn-primary:after {
    color: #fff !important;
    border: 0px solid #ccc !important;
    background: rgb(12, 190, 152) !important;
}

.btn-group.filter-options .btn.btn--primary {
    background: none !important;
    color: #7b605b !important;
    border-bottom: 5px solid #b11b4d !important;
    margin: 0 5px;
    padding: 10px 30px;
    font-size: 18px;
}

*/


/* Bootstrap Buttons Start */

.wrapper.btn{
    padding: 0px;
    border: 0px;
}

.wrapper.btn a{
    display: block;
    font-size: 12px;
    text-decoration: none;
    color: #fff;
    text-align: center;
    position: relative;
    transition: all .35s;
    padding:7px 12px;
    border: 0px;
    background: #b11b4d;
}

.wrapper.btn.big a{
    font-size: 14px;
    padding: 10px 17px;
}

.wrapper.btn a span{
    position: relative;
    z-index: 2;
}

.wrapper.btn a:after{
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background: #FF4081;
    transition: all .25s;
}

.wrapper.btn a:hover{
    color: #fff;
    background: none !important;
}

.wrapper.btn a:hover:after{
    width: 100%;
}

.wrapper.btn:hover,
.wrapper.btn:before {
    background: none !important;
}

/* Bootstrap Buttonn Ends*/

/* Shuffle Tabs Start */
.wrapper.btn.tab {
    border-bottom: 5px solid #c00;
    color: #5d6d77;
    padding-left: 40px !important;
    padding-right: 40px !important;
    margin-left: 10px;
    margin-right: 10px;
    font-size: 14px !important;
}

.wrapper.btn.tab:hover {
    border-bottom: 5px solid #FF4081 !important;
    color: #FF4081 !important;
}

.wrapper.btn.tab.active {
    border-bottom: 5px solid #FF4081 !important;
    color: #FF4081 !important;
    background: none !important;
    box-shadow: inset 0 1px 2px rgb(0 0 0 / 0%);
}
/* Shuffle Tabs Ends */

.concert .btn {
    text-align: left;
    margin: 7px 0 0 0;
    font-size: 12px;
    clear:both;
}

.codeContainer.shuffle .btn {
    padding: 0.75em 0.8em;
    font-size: 12px;
}

.btn.btn-primary:hover,
.btn-primary:hover,
.btn:hover {
    color: #fff !important;
}

.navbar li,
.navbar li+li {
    margin-top: 0px;
}

.navbar-nav li.nav-item {
    border-bottom: 5px solid rgba(255, 255, 255, 0);
    padding: 0 0 10px 0 !important;
    margin: 0 30px;
}

.navbar-nav li a:hover {
    text-decoration: none;
}

.navbar-nav li:hover {
    border-bottom: 5px solid #fff !important;
}

.videoContainer {
    padding: 150px 0 150px 0;
    float:left; 
    width: 100%;
}

.navbar-brand {
    width: 600px;
    padding: 60px 4% 75px 4%;
}

.navbar-brand img {
    width: 100%;
}
.navbar {
    position: absolute;
    z-index: 1000;
    top: 0px;
    width: 100%;
    background: #000;
    padding: 0;
    margin-top:-30px;
}


.navbar-collapse {
    background: #fff;
    width: 100%;
    padding: 0px;
    margin-top:0px;
}

.lavendar {
    background: url("https://jky.graphics/UMG/assets/img/img-position.jpg") no-repeat 0 0 #d4c9c7;
    background-size: 100vh;
    background-attachment: fixed;
    padding: 70px;
}


.lavendar h2,
.concert h2,
.card-body h2,
h2.infiniteScroll {
    text-shadow: 5px 0px 40px #d4c9c7;
    font-size: 32px;
    margin-bottom: 25px;
    color:#241310;
}

.lavendar h2.rightText {
    text-align: left;
    padding-left: 7%;
}


.bg-light {
    background: none !important;
    background: url("https://jky.graphics/UMG/assets/img/bg-topGrad.png") repeat-x !important;
}

.venue {
    background: url("https://jky.graphics/UMG/assets/img/bg-green.jpg") 50%;
    background-size: cover;
    background-attachment: fixed;
    padding: 70px;
}

.venue .code {
    background: rgba(255, 255, 255, 0.7);
}


.concert {
    padding: 70px;
    background: #d4c9c7;
}

.card-title {
    padding: 10px 10px 5px 10px;
    margin:0px;
}

.nav-item a {
    padding: 0px;
    color: #FF4081 !important;
    text-transform: uppercase;
    font-weight: 800;
    font-size: 1.6vw;
    text-shadow: 5px 0px 30px #000;
    padding-bottom: 15px;
}

.nav-item:hover {
    border: 0px !important;
    color: #fff !important;
    border-bottom: 0px solid #fff !important;
} 

.navbar-light a {
   color: #fff;
}


.navbar-light .navbar-toggler-icon.collapse {
    background: url("https://jky.graphics/UMG/assets/img/menu-mobile.png") no-repeat;
}

.navbar-light .navbar-toggler {
    color: #FF4081;
    position: absolute;
    top: 30px;
    right: 4%;
}

.carousel-control-prev {
    color: #fff;
    width: 10%;
}

.carousel-control-next {
    color: #fff;
    width: 10%;
}

.carousel-control-next-icon, .carousel-control-prev-icon {
    width: 4rem;
    height: 4rem;
}

.carousel-control-next:hover, .carousel-control-prev:hover {
    opacity: 1;
}


.navbar-nav {
    margin: o auto;
    float:none;
}
/* ... */

